web-infras/parser/tests/fixtures/babel/es2017/async-functions/36/output.txt
[SyntaxError]: Invalid shorthand property initializer (1,16)
1|const foo = ({ async = true });
 |              ^
